fixed header spacing

--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 3%;
 }
 
 .FOOTER {
@@ -32,6 +33,7 @@
     justify-content: space-between;
     font-style: oblique;
     font-size: 18px;
+    margin-top: 10%;
 }
 
 .title_text {
